[package]
edition = "2018"
name = "nf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.53"
bytes = "1.1.0"
clap = "3.1.9"
config = "0.13.1"
futures = "0.3.17"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
rust-crypto = "0.2.36"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.79"
thiserror = "1.0.31"
tokio = {version = "1.17.0", features = ["full", "macros"]}
